--- a/servicios.html
+++ b/servicios.html
@@ -32,22 +32,22 @@
 <body>
 <header>
   <h1>MyFairTech</h1>
-  <nav>
-    <a href="index-">Inicio</a>
-    <div class="dropdown">
-      <a href="servicios-">Servicios ▾</a>
-      <div class="dropdown-content">
-        <a href="consultoria-">Consultoría</a>
-        <a href="soporte-">Soporte IT</a>
-        <a href="modernizacion-">Modernización de Apps</a>
-        <a href="ztna-">ZTNA / Acceso Remoto</a>
-        <a href="cloud-">Infraestructura Cloud</a>
-      </div>
+ <nav>
+  <a href="/index.html">Inicio</a>
+  <div class="dropdown">
+    <a href="/servicios.html">Servicios ▾</a>
+    <div class="dropdown-content">
+      <a href="/consultoria.html">Consultoría</a>
+      <a href="/soporte.html">Soporte IT</a>
+      <a href="/modernizacion.html">Modernización de Apps</a>
+      <a href="/ztna.html">ZTNA / Acceso Remoto</a>
+      <a href="/cloud.html">Infraestructura Cloud</a>
     </div>
-    <a href="casos-">Casos</a>
-    <a href="nosotros-">Nosotros</a>
-    <a href="contacto-">Contacto</a>
-  </nav>
+  </div>
+  <a href="/casos.html">Casos</a>
+  <a href="/nosotros.html">Nosotros</a>
+  <a href="/contacto.html">Contacto</a>
+</nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
     <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN"></a>
