--- a/casos-en.html
+++ b/casos-en.html
@@ -33,20 +33,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-    <a href="index-en.html">Home</a>
+    <a href="/index-en.html">Home</a>
     <div class="dropdown">
-      <a href="servicios-en.html">Services ▾</a>
-      <div class="dropdown-content">
-        <a href="consultoria-en.html">Consulting</a>
-        <a href="soporte-en.html">IT Support</a>
-        <a href="modernizacion-en.html">App Modernization</a>
-        <a href="ztna-en.html">ZTNA / Remote Access</a>
-        <a href="cloud-en.html">Cloud Infrastructure</a>
+      <a href="/servicios-en.html">Services ▾</a>
+      <div class="/dropdown-content">
+        <a href="/consultoria-en.html">Consulting</a>
+        <a href="/soporte-en.html">IT Support</a>
+        <a href="/modernizacion-en.html">App Modernization</a>
+        <a href="/ztna-en.html">ZTNA / Remote Access</a>
+        <a href="/cloud-en.html">Cloud Infrastructure</a>
       </div>
     </div>
-    <a href="casos-en.html">Cases</a>
-    <a href="nosotros-en.html">About Us</a>
-    <a href="contacto-en.html">Contact</a>
+    <a href="/casos-en.html">Cases</a>
+    <a href="/nosotros-en.html">About Us</a>
+    <a href="/contacto-en.html">Contact</a>
   </nav>
   <div class="language-selector">
     <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
