--- a/index-en.html
+++ b/index-en.html
@@ -241,23 +241,21 @@
 
 <header>
   <h1>MyFairTech</h1>
-  <nav>
-    <a href="index-en.html">Home</a>
-
+   <nav>
+    <a href="/index-en.html">Home</a>
     <div class="dropdown">
-      <a href="services.html">Services ▾</a>
+      <a href="/servicios-en.html">Services ▾</a>
       <div class="dropdown-content">
-        <a href="consulting.html">Consulting</a>
-        <a href="support.html">IT Support</a>
-        <a href="modernization.html">App Modernization</a>
-        <a href="ztna.html">ZTNA / Remote Access</a>
-        <a href="cloud.html">Cloud Infrastructure</a>
+        <a href="/consultoria-en.html">Consulting</a>
+        <a href="/soporte-en.html">IT Support</a>
+        <a href="/modernizacion-en.html">App Modernization</a>
+        <a href="/ztna-en.html">ZTNA / Remote Access</a>
+        <a href="/cloud-en.html">Cloud Infrastructure</a>
       </div>
     </div>
-
-    <a href="cases.html">Cases</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact</a>
+    <a href="/casos-en.html">Cases</a>
+    <a href="/nosotros-en.html">About Us</a>
+    <a href="/contacto-en.html">Contact</a>
   </nav>
 
   <div class="language-selector">
